[gd_scene load_steps=7 format=2]

[ext_resource path="res://graphics/character-jump.png" type="Texture" id=1]
[ext_resource path="res://character.gd" type="Script" id=2]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25, 40 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 25, 26 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25, 52 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -39 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )
offset = Vector2( -4.479, 0 )
hframes = 3

[node name="Area2DStayGround" type="Area2D" parent="."]
position = Vector2( 0, 75 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DStayGround"]
shape = SubResource( 2 )

[node name="Area2DTouchGround" type="Area2D" parent="."]
position = Vector2( 0, 20 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DTouchGround"]
shape = SubResource( 4 )

[node name="Area2DBoundBox" type="Area2D" parent="."]
position = Vector2( 0, -44 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DBoundBox"]
modulate = Color( 0.376471, 0.105882, 0.105882, 1 )
shape = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0, -68 )
enabled = true
cast_to = Vector2( 0, 130 )
collide_with_areas = true
